tests/sumo/tls/NEMA/errors/emptyRing/errors.sumo
Error: At traffic signal 'C', ring 2 contains only '0'
Quitting (on error).
